# Loan-ML-Pipeline

./: README.md  eda.py  eda_visualization.ipynb  model_training.py  model_validation.py  pyproject.toml
Deployment/: Dockerfile  app.py  frontend_page.py  requirements.txt
Deployment/models/: best_model_metadata.json
